--- a/candidly backend/package.json
+++ b/candidly backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -12,11 +12,14 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.11.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
-    "nodemailer": "^6.9.6"
+    "nodemailer": "^6.9.6",
+    "winston": "^3.11.0",
+    "winston-mongodb": "^5.1.1"
   }
 }
