--- a/candidly frontend/my-app/package.json
+++ b/candidly frontend/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
