--- a/candidly backend/package.json
+++ b/candidly backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.445.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -18,7 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-mongodb": "^5.1.1"
   },
