--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "candid-backend",
+  "name": "candidly_app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
-   },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd candidly_backend && node index.js"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
