--- a/candidly_backend/package.json
+++ b/candidly_backend/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll"
-   },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.445.0",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
