--- a/candidly_frontend/my-app/.env
+++ b/candidly_frontend/my-app/.env
@@ -2,3 +2,5 @@
 # SECRET_KEY=my_secret_key
 NEXTAUTH_SECRET=hiddenPrivateKey
 NEXTAUTH_URL=http://localhost:3000
+LOCAL_ENDPOINT=http://localhost:3000
+```
