--- a/candidly_frontend/my-app/package.json
+++ b/candidly_frontend/my-app/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && (cd ../candidly_backend && npm install)",
-    "start-client": "next start",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
