fixed some errors that came up while trying to deploy the site to vercel

--- a/candidly_frontend/my-app/.env
+++ b/candidly_frontend/my-app/.env
@@ -1,6 +1,7 @@
 # NEXT_PUBLIC_API_URL=https://api.example.com
 # SECRET_KEY=my_secret_key
 NEXTAUTH_SECRET=hiddenPrivateKey
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://candidly-irx6au3hj-joker-unchained.vercel.app
 LOCAL_ENDPOINT=http://localhost:3000
+# LOCAL_ENDPOINT=https://candidly-irx6au3hj-joker-unchained.vercel.app
 ```
