--- a/candidly_frontend/my-app/.env
+++ b/candidly_frontend/my-app/.env
@@ -1,7 +1,15 @@
 # NEXT_PUBLIC_API_URL=https://api.example.com
 # SECRET_KEY=my_secret_key
 NEXTAUTH_SECRET=hiddenPrivateKey
-NEXTAUTH_URL=https://candidly-irx6au3hj-joker-unchained.vercel.app
+NEXTAUTH_URL=http://localhost:3000
 LOCAL_ENDPOINT=http://localhost:3000
-# LOCAL_ENDPOINT=https://candidly-irx6au3hj-joker-unchained.vercel.app
 ```
+
+
+# NEXTAUTH_SECRET=hiddenPrivateKey
+# NEXTAUTH_URL=https://candidly-irx6au3hj-joker-unchained.vercel.app
+# LOCAL_ENDPOINT=http://localhost:3000
+# ```
+
+
+
