--- a/candidly_frontend/my-app/package.json
+++ b/candidly_frontend/my-app/package.json
@@ -14,7 +14,8 @@
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^10",
