--- a/candidly_frontend/my-app/.env
+++ b/candidly_frontend/my-app/.env
@@ -1,13 +1,12 @@
-# NEXT_PUBLIC_API_URL=https://api.example.com
-# SECRET_KEY=my_secret_key
 NEXTAUTH_SECRET=hiddenPrivateKey
-NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_URL=http://localhost:3000
 LOCAL_ENDPOINT=http://localhost:3000
+PRODUCTION_ENDPOINT=https://candidly-a545d5264a43.herokuapp.com/
 ```
 
 
 # NEXTAUTH_SECRET=hiddenPrivateKey
-# NEXTAUTH_URL=https://candidly-irx6au3hj-joker-unchained.vercel.app
+NEXTAUTH_URL=https://candidly-joker-unchained.vercel.app/
 # LOCAL_ENDPOINT=http://localhost:3000
 # ```
 
