created the page for the verify email, made some things in the dashboard mobile responsive

--- a/candidly_frontend/my-app/.env
+++ b/candidly_frontend/my-app/.env
@@ -1,12 +1,12 @@
 NEXTAUTH_SECRET=hiddenPrivateKey
 # NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://candidly-joker-unchained.vercel.app/
 LOCAL_ENDPOINT=http://localhost:3000
-PRODUCTION_ENDPOINT=https://candidly-a545d5264a43.herokuapp.com/
+PRODUCTION_ENDPOINT=https://candidly-a545d5264a43.herokuapp.com
 ```
 
 
 # NEXTAUTH_SECRET=hiddenPrivateKey
-NEXTAUTH_URL=https://candidly-joker-unchained.vercel.app/
 # LOCAL_ENDPOINT=http://localhost:3000
 # ```
 
