--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.6",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
