now rendering the images on the website, also added a modal which makes the images pop-up into full screen mode when they are clicked on, will work on how it looks on mobile later, need to rest now

--- a/candidly_frontend/my-app/package.json
+++ b/candidly_frontend/my-app/package.json
@@ -16,6 +16,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-modal": "^3.16.1",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
