--- a/candidly_frontend/my-app/package.json
+++ b/candidly_frontend/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
