--- a/candidly_backend/package.json
+++ b/candidly_backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.6",
+    "sharp": "^0.33.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
